--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springbootdemo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.error.include-message=ALWAYS
-server.error.include-stacktrace=ALWAYS
+#server.error.include-message=ALWAYS
+#server.error.include-stacktrace=ALWAYS
